# aegistry

./: .gitignore  AGENTS.md  Cargo.toml  plan.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: db.rs  fetcher.rs  indexer.rs  lib.rs  loader.rs  main.rs  monitoring.rs  parser_australia.rs  parser_canada.rs  parser_eu.rs  parser_ofac.rs  parser_switzerland.rs  parser_uk.rs  parser_un.rs  pep_austria.rs  pep_belgium.rs  pep_dutch_tweede_kamer.rs  pep_eu_commission.rs  pep_eu_parliament.rs  pep_french_assemblee.rs  pep_german_bundestag.rs  pep_spain.rs  pep_uk_parliament.rs  pep_us_congress.rs
crates/matching-core/: Cargo.toml
crates/matching-core/src/: lib.rs
crates/screening-api/: Cargo.toml
crates/screening-api/src/: analytics.rs  audit.rs  auth.rs  batch.rs  main.rs  risk.rs  tenant.rs  tenant_db.rs  webhooks.rs
crates/screening-api/static/: index.html
data/: analytics.db  risk.db  tenants.db
data/index/: .managed.json  meta.json
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  main.js
