[workspace]
members = [
    "crates/core",
    "crates/screening-api",
    "crates/matching-core",
    "crates/ingest",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1.3"
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "gzip", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
strsim = "0.10"
tantivy = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
