[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
aegistry-core = { path = "../core" }
anyhow = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true }
regex = "1"
scraper = "0.19"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
