[package]
name = "matching-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aegistry-core = { path = "../core" }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
strsim = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
